--- a/solution/面试题0202 返回倒数第k个节点.md
+++ b/solution/面试题0202 返回倒数第k个节点.md
@@ -1,10 +1,13 @@
 ```
 int kthToLast(struct ListNode* head, int k){
-    struct ListNode* fast=head;
-    struct ListNode* slow=head;
-    
-    while(k>0){
-        fast=fast->next;
+    struct ListNode* fast=head;  //快指针
+    struct ListNode* slow=head;   //慢指针
+     /*
+     快指针比慢指针快k步，这样快指针到末端时候，慢指针就刚好到倒数第k个位置
+     */
+    while(k>0)  
+    {   
+        fast=fast->next;   
         k--;
     }
     while(fast){
